# SpamTrap

./: .gitignore  Dockerfile  README.md  config.yaml.example  docker-compose.yaml  main.py  pyproject.toml
